--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "heroku-cli": "^7.0.9",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
